<resources>
    <string name="app_name">Sellback App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Welcome</string>
    <string name="nav_header_subtitle">Please sign in</string>
    <string name="nav_header_desc">Navigation header</string>

    // menu strings
    <string name="action_settings">Settings</string>
    <string name="save_edit">Save</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="new_ad">Create New Ad</string>
    <string name="items">My Items</string>
    <string name="profile">My Profile</string>

    //item strings
    <string name="title">Title</string>
    <string name="title_std">Your Item Name</string>
    <string name="category">Category</string>
    <string name="location">Location</string>
    <string name="price">Price</string>
    <string name="price_val_std">0.99</string>
    <string name="expire_date">20/04/2020</string>
    <string name="expire_date_header">Expire Date</string>
    <string name="item_condition">Item condition</string>
    <string name="main_characteristics">Main Characteristics</string>
    <string name="description">Description of the Item on sale</string>
    <string name="description_header">Description</string>
    <string name="date_edit">Enter Date</string>
    <string name="currency">$</string>
    <string name="condition_value">Used (2nd hand)</string>
    <string name="btn_str">Change</string>
    <string name="sub_cat">Sub Category</string>
    <string name="seller">Sold by: </string>
    <string name="status">Available</string>
    <string name="status_header">Status:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_item_msg">There are no items on sale</string>

    //user strings
    <string name="full_name">Full Name</string>
    <string name="username">username</string>
    <string name="email">email@domain.com</string>
    <string name="rating">Rating: </string>

    <string name="full_name_header">Full name:</string>
    <string name="username_header">Username:</string>
    <string name="email_header">Email:</string>
    <string name="location_header">Location:</string>
    <string name="totalRev">Total reviews:</string>
    <string name="def_numRev">0</string>

    <string name="edit">Edit</string>
    <string name="logout">Logout</string>

    <string name="btn_loggedout">Uh-oh! You need to sign in to see items on sale.</string>
    <string name="emptylist">Ooops! Looks like you don\'t have any items.</string>
    <string name="emptyfavlist">You do not have favorite items. Go explore!</string>

    <string name="fav">Favorite Items</string>
    <string name="bought">Bought Items</string>
    <string name="locate">Locate me</string>

    <string name="login">Please login with your account</string>
    <string name="buy">BUY</string>
    <string name="block">BLOCK</string>
    <string name="interested">Users interested</string>
    <string name="norevs">Ooops! No reviews for this user</string>

    <string name="get_dir">Get Directions</string>

</resources>
