<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/showProfileFragment"
            android:icon="@drawable/profile_icon"
            android:title="@string/profile" />

        <item
            android:id="@+id/nav_itemList"
            android:icon="@drawable/myitem_icon"
            android:title="@string/items" />

        <item
            android:id="@+id/itemsOfInterestListFragment"
            android:icon="@android:drawable/btn_star"
            android:title="Favorite Items"
            app:showAsAction="always" />

        <item
            android:id="@+id/itemBoughtFragment"
            android:title="Bought Items"
            app:showAsAction="always"/>

        <item android:title="@string/logout"
            android:id="@+id/logout_action"
            android:icon="@drawable/logout_icon"
            app:showAsAction="always"/>
    </group>
</menu>
